@@ -1,1 +1,2 @@
 WARNING: page-no-content.pdf, object 4 0 at offset 288: kid 1 (from 0) MediaBox is undefined; setting to letter / ANSI A
+qpdf: operation succeeded with warnings; resulting file may have some problems
